deployment/kubernetes/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: n1c0l4stournier/springboot.rest:latest
        imagePullPolicy: Always
        name: springboot-rest
