deployment/kubernetes/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  ports:
  - port: 8181
    targetPort: 8181
  selector:
    app: api
