deployment/kubernetes/api/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /dev
        backend:
          serviceName: api-service
          servicePort: 8181
